# DTE-3607-Systems_Programming

./: .gitignore  CMakeLists.txt  README.md
Godot_project/: HiD and Camera Control.tscn  Main.tscn  WorldEnvironment.tscn  move.tscn  project.godot  tesst.tscn
Godot_project/RBs/: RBPlane.tscn  RBSphere.tscn  RBStaticSphere.tscn
Godot_project/material/: color1.tres  color2.tres
Godot_project/scripts/: camera2.gd  plane_normal.gd
benchmarking/: CMakeLists.txt
benchmarking/benchmarks/: my_benchmark_dev2.cpp  my_benchmark_dev3.cpp  my_dummy_bechmarks.cpp  test_setup.h
clients/godot/core/: packed_data_container.cpp  project_settings.cpp  ring_buffer.h
clients/godot/core/io/: resource_loader.cpp
clients/godot/core/os/: os.cpp
clients/godot/drivers/unix/: file_access_unix.cpp
clients/godot/modules/dte3607physrv/: SCsub  body_sw.h  dte3607_entry_point.cpp  dte3607_entry_point.h  dte3607_types.cpp  dte3607_types.h  physics_server_sw.cpp  physics_server_sw.h  register_types.cpp  register_types.h
cmake/: testing_utils.cmake
physengine/: CMakeLists.txt
physengine/include/physengine/: api.h
physengine/include/physengine/bits/: concepts.h  fixtures.h  types.h  types_oop.h
physengine/include/physengine/mechanics/: compute_trajectory.h  sphere_vs_fixed_plane_detection.h  sphere_vs_fixed_plane_response.h  sphere_vs_fixed_sphere_detection.h  sphere_vs_sphere_detection.h  sphere_vs_sphere_response.h
physengine/include/physengine/solvers/: solver_dev_level0.h  solver_dev_level1.h  solver_dev_level2.h  solver_dev_level2_2.h  solver_dev_level2_3.h  solver_dev_level2_3_old.h  solver_dev_level2_3_trying.h  solver_dev_level3.h  solver_dev_level4.h  solver_project.h
physengine/include/physengine/utils/: to_string.h  type_conversion.h
testing/: CMakeLists.txt
testing/unittests/: my_dummy_unittests.cpp
testing/unittests/predefined/: predef_mech_compute_trajectory.cpp  predef_mech_sp_vs_fpl_detection.cpp  predef_mech_sp_vs_fpl_response.cpp  predef_mech_sp_vs_sp_detection.cpp  predef_mech_sp_vs_sp_response.cpp  predef_solver_dev_level1.cpp  predef_solver_dev_level2.cpp  predef_solver_dev_level3.cpp  predef_solver_dev_level4.cpp
